fix svg not showing

--- a/style.css
+++ b/style.css
@@ -51,10 +51,10 @@ h1 {
 	justify-content: center;
 	align-items: center;
 }
-.item > button > svg {
+/* .item > button > svg {
 	height: 1.5rem;
 	width: 1.5rem;
-}
+} */
 @media screen and (prefers-color-scheme: dark) {
 	html {
 		color-scheme: dark;
